--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+   <link rel="stylesheet" href="./leaflet-plugins/Leaflet.markercluster/dist/MarkerCluster.css"/>
+   <link rel="stylesheet" href="./leaflet-plugins/Leaflet.markercluster/dist/MarkerCluster.Default.css"/>
 
   <title>Carte Pierres</title>
 
@@ -17,6 +19,8 @@
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="./leaflet-plugins/Leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+  :qa
 
   <script src="./archaeological.json"></script>
   <script src="pierres.js"> </script>
