--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Carte Pierres</title>
 
   <link rel="stylesheet" href="pierres.css" type="text/css" />
+  <link rel="stylesheet" href="./lf-plugins/L.GeoSearch/src/css/l.geosearch.css" type="text/css" />
 
 </head>
 
@@ -17,6 +18,8 @@
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="./lf-plugins/leaflet-hash/leaflet-hash.js"></script>
+  <script src="./lf-plugins/L.GeoSearch/src/js/l.control.geosearch.js"></script>
+  <script src="./lf-plugins/L.GeoSearch/src/js/l.geosearch.provider.openstreetmap.js"></script>
   <script src="./archaeological.json"></script>
   <script src="pierres.js"> </script>
 
