Use leaflet overpass layer  for dynamical POI loading

--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
 </head>
 
 <body>
+  <div id="loader">
+      <img src="loading.gif"/>
+      <p>Chargement des points ....</p>
+  </div>
+
   <div>
    <div id="map"></div>
+  <div>
 
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="./lf-plugins/leaflet-hash/leaflet-hash.js"></script>
   <script src="./lf-plugins/L.GeoSearch/src/js/l.control.geosearch.js"></script>
   <script src="./lf-plugins/L.GeoSearch/src/js/l.geosearch.provider.openstreetmap.js"></script>
-  <script src="./archaeological.json"></script>
+  <script src="./lf-plugins/leaflet-layerJSON/dist/leaflet-layerjson.min.js"></script>
   <script src="pierres.js"> </script>
 
-  <div>
 </body>
 </html>
