fix gif loader path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div id="loader">
-      <img src="loading.gif"/>
+      <img src="images/loading.gif"/>
       <p>Chargement des points ....</p>
   </div>
 
