Properly indent code

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!doctype html>
 <html lang="fr">
+
 <head>
-  <meta charset="utf-8">
-   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
-  <title>Carte Pierres</title>
+    <title>Carte Pierres</title>
 
-  <link rel="stylesheet" href="pierres.css" type="text/css" />
-  <link rel="stylesheet" href="./lf-plugins/L.GeoSearch/src/css/l.geosearch.css" type="text/css" />
+    <link rel="stylesheet" href="pierres.css" type="text/css" />
+    <link rel="stylesheet" href="./lf-plugins/L.GeoSearch/src/css/l.geosearch.css" type="text/css" />
 
 </head>
 
 <body>
-  <div id="loader">
-      <img src="images/loading.gif"/>
-      <p>Chargement des points ....</p>
-  </div>
+    <div id="loader">
+        <img src="images/loading.gif" />
+        <p>Chargement des points ....</p>
+    </div>
 
-  <div>
-   <div id="map"></div>
-  <div>
+    <div>
+        <div id="map"></div>
+    </div>
 
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script src="./lf-plugins/leaflet-hash/leaflet-hash.js"></script>
-  <script src="./lf-plugins/L.GeoSearch/src/js/l.control.geosearch.js"></script>
-  <script src="./lf-plugins/L.GeoSearch/src/js/l.geosearch.provider.openstreetmap.js"></script>
-  <script src="./lf-plugins/leaflet-layerJSON/dist/leaflet-layerjson.min.js"></script>
-  <script src="pierres.js"> </script>
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="./lf-plugins/leaflet-hash/leaflet-hash.js"></script>
+    <script src="./lf-plugins/L.GeoSearch/src/js/l.control.geosearch.js"></script>
+    <script src="./lf-plugins/L.GeoSearch/src/js/l.geosearch.provider.openstreetmap.js"></script>
+    <script src="./lf-plugins/leaflet-layerJSON/dist/leaflet-layerjson.min.js"></script>
+    <script src="pierres.js">
+    </script>
 
 </body>
+
 </html>
