--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="pierres.css" type="text/css" />
     <link rel="stylesheet" href="./lf-plugins/L.GeoSearch/src/css/l.geosearch.css" type="text/css" />
+    <link rel="stylesheet" href="./lf-plugins/Leaflet.markercluster/dist/MarkerCluster.Default.css " type="text/css" />
+    <link rel="stylesheet" href="./lf-plugins/Leaflet.markercluster/dist/MarkerCluster.css " type="text/css" />
 
 </head>
 
@@ -28,8 +30,8 @@
     <script src="./lf-plugins/L.GeoSearch/src/js/l.control.geosearch.js"></script>
     <script src="./lf-plugins/L.GeoSearch/src/js/l.geosearch.provider.openstreetmap.js"></script>
     <script src="./lf-plugins/leaflet-layerJSON/dist/leaflet-layerjson.min.js"></script>
-    <script src="pierres.js">
-    </script>
+    <script src="./lf-plugins/Leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+    <script src="pierres.js"></script>
 
 </body>
 
