--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
 </head>
 
 <body>
-    <div id="loader">
-        <img src="images/loading.gif" />
-        <p>Chargement des points ....</p>
-    </div>
 
-    <div>
+    <div id="content">
         <div id="map"></div>
+        <img id="loader" src="images/loading.gif" />
     </div>
 
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
