import leaflet.geoCSV as git submodule

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <script src="./lf-plugins/L.GeoSearch/src/js/l.geosearch.provider.openstreetmap.js"></script>
     <script src="./lf-plugins/leaflet-layerJSON/dist/leaflet-layerjson.min.js"></script>
     <script src="./lf-plugins/Leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+    <script src="./lf-plugins/Leaflet.geoCSV/leaflet.geocsv.js"></script>
+    <script src="t4t35.js"></script>
     <script src="pierres.js"></script>
 
 </body>
