--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="./lf-plugins/leaflet-layerJSON/dist/leaflet-layerjson.min.js"></script>
     <script src="./lf-plugins/Leaflet.markercluster/dist/leaflet.markercluster.js"></script>
     <script src="./lf-plugins/Leaflet.geoCSV/leaflet.geocsv.js"></script>
-    <script src="overpass_dyn.js"></script>
+    <script src="OverpassDynLayer.js"></script>
     <script src="t4t35.js"></script>
     <script src="pierres.js"></script>
 
