--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
     <title>Carte Pierres</title>
 
@@ -21,8 +21,8 @@
         <img id="loader" src="images/loading.gif" />
     </div>
 
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="./lf-plugins/leaflet-hash/leaflet-hash.js"></script>
     <script src="./lf-plugins/L.GeoSearch/src/js/l.control.geosearch.js"></script>
     <script src="./lf-plugins/L.GeoSearch/src/js/l.geosearch.provider.openstreetmap.js"></script>
